--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 # Mostra o SQL gerado pelo Hibernate no console (bom para debug)
 spring.jpa.show-sql=true
+
+logging.level.org.springframework.security=DEBUG
